* 2005-06-13 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fix multi-window problem on opening files
	- Fix xy widget line clipping problem
	- Move directory manipulation to using os.path
	
* 2005-06-12 Jeremy Sanders <jeremy@jeremysanders.net>
        - ReloadData command and Data, Reload dialog added to reload
	linked datasets (idea J. Graham)
	- Add icon for reload, create, and new datasets
	- os.path import added to commandinterface
	- GPL() command works now
	- function plotters can be set to plot only over a particular
	range (patch by James Graham)
	- Use QSettings to do settings code rather than own code (based on
	patch by James Graham)
	- Default settings for root widget fixed
	- Made clipping region larger to help get diamond error box angles
	correct
	- Small fix to dataset creation dialog (unsized object error)
	
* 2005-06-11 Jeremy Sanders <jeremy@jeremysanders.net>
	- Command line parsing now uses optparse (thanks to J Graham for
	inspiration)
	- MainWindow now accepts drops of files (patch by James Graham)
	- MainWindow has per-window working directory (again J. Graham)

* 2005-05-24 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fix axis positioning in stacked plot where one margin is zero
	
* 2005-05-19 Jeremy Sanders <jeremy@jeremysanders.net>
	- Make size of property window more sensible by default
	- Documentation update
	- Add inside.vsz example
	- Released 0.6
	
* 2005-05-18 Jeremy Sanders <jeremy@jeremysanders.net>
	- Add icon for main window
	- Veusz should look in $HOME not /home/$USER for config file
	- Actually allow data to be modified in Data->Edit dialog
	
* 2005-05-17 Jeremy Sanders <jeremy@jeremysanders.net>
	- Add signal handler to catch ctrl+c and ask to close docs -
	James Graham's idea
	- Changed File->Quit to close all windows. File->Close Window
	closes current window
	
* 2005-05-15 Jeremy Sanders <jeremy@jeremysanders.net>
	- Patch from James Graham to make Ctrl+P print